JSAI/error/src/test/resources/base/k010.js
function foo(param) {
    var arguments = 7;
    return arguments + param;
}
print(foo(3));
